modules/marketing-automation/main/default/objects/OA_Graph_Config__mdt/OA_Graph_Config__mdt.object-meta.xml
<CustomObject>
    <description>Non-sensitive configuration for OA_BookingPoller: Graph user identity, campaign ID, and operational flags. Deploy to update; no Setup UI required.</description>
    <label>OA Graph Config</label>
    <pluralLabel>OA Graph Configs</pluralLabel>
</CustomObject>