modules/marketing-automation/main/default/objects/OA_Graph_Config__mdt/fields/Alert_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Alert_Owner_Id__c</fullName>
    <description>Salesforce User ID to assign alert Tasks and prep Tasks to. Should be the primary Salesforce admin / deal owner.</description>
    <label>Alert Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>