modules/marketing-automation/main/default/objects/OA_Graph_Config__mdt/fields/Booking_Marker__c.field-meta.xml
<CustomField>
    <fullName>Booking_Marker__c</fullName>
    <description>Text fragment present in EAC-synced Book-with-me event descriptions. Used to distinguish booking events from other calendar events. Default: "bookings page"</description>
    <label>Booking Marker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>