modules/marketing-automation/main/default/objects/OA_Graph_Config__mdt/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <description>Salesforce Campaign ID for the active EDWOSB outreach campaign. Used to identify and update the correct CampaignMember record.</description>
    <label>Campaign Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>