modules/marketing-automation/main/default/objects/OA_Graph_Config__mdt/fields/Graph_User_OID__c.field-meta.xml
<CustomField>
    <fullName>Graph_User_OID__c</fullName>
    <description>Azure AD Object ID of the calendar owner. Used in the Graph API path: /users/{OID}/events. Extracted from Teams context URL in EAC event descriptions.</description>
    <label>Graph User OID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>