modules/marketing-automation/main/default/objects/OA_Graph_Config__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <description>Master switch for OA_BookingPoller. Set to false to disable all polling without unscheduling the cron jobs.</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>